tg3: fix length overflow in VPD firmware parsing

--- a/pages/styles/Header.module.css
+++ b/pages/styles/Header.module.css
@@ -66,4 +66,6 @@
 @media (max-width: 380px) {
   .headerLinks {
     font-size: 1em;
-  
+    margin-right: 0.5em;
+  }
+}
